# VRFaceTracking

./: .gitignore  Cargo.toml  README.md  config.json  run_debug.ps1
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  creating_a_module.md  debug_and_config.md  eye_tracking_analysis.md  glossary.md  mutation_pipeline.md  resonite.md  vrc_parameter_pipeline.md
experimental/: README.md
experimental/livelink_module/: Cargo.toml
experimental/livelink_module/src/: livelink.rs
experimental/pico_module/: Cargo.toml
experimental/pico_module/src/: config_setup.rs  data.rs  lib.rs  mapping.rs  pico.rs
experimental/sranipal_module/: Cargo.toml  README.md
experimental/sranipal_module/src/: ffi.rs  lib.rs  mapping.rs  sranipal.rs
livelink_module/: Cargo.toml  decode_v1.py
livelink_module/src/: lib.rs  livelink.rs
modules/test_logger/: Cargo.toml
modules/vd_module/: Cargo.toml
modules/vd_module/src/: virtual_desktop.rs
scripts/: debug_expressions.ps1
test_logger/: Cargo.toml
test_logger/src/: lib.rs
vd_module/: Cargo.toml
vd_module/src/: lib.rs  virtual_desktop.rs
vrft_d/: vrft_d.vrmanifest
vrft_d/api/: Cargo.toml
vrft_d/api/src/: lib.rs  proxy.rs
vrft_d/app/: Cargo.toml  config.json
vrft_d/app/src/: dispatcher.rs  lib.rs  main.rs  parameter_solver.rs  shape_legacy.rs  steamvr.rs
vrft_d/app/src/osc/: mod.rs  resonite.rs  vrchat.rs
vrft_d/app/src/osc/parameters/: base_param.rs  binary_param.rs  eparam.rs  legacy_eye.rs  legacy_lip.rs  mod.rs  native_param.rs  registry.rs  unified_expressions.rs
vrft_d/app/src/osc/query/: extensions.rs  host.rs  mod.rs  service.rs  vrchat.rs
vrft_d/app/src/strategies/: generic_udp.rs  mod.rs  resonite.rs  vrchat.rs
vrft_d/app/tests/: parameter_tests.rs
vrft_d/common/: Cargo.toml
vrft_d/common/src/: lib.rs  (+5 more)
vrft_d/netclr/: Cargo.toml
vrft_udp_rcv/: Cargo.toml  README.md
vrft_udp_rcv/src/: main.rs
(+23 files in other folders)
