[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.24", features = ["bytemuck", "serde"] }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
] }

[features]
xtralog = []