[package]
name = "vrft_d"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
api = { path = "../api" }
netclr = { path = "../netclr" }
libloading = "0.8"
rosc = "0.10"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mdns-sd = "0.10"
axum = "0.7"
ctrlc = "3.5.1"

[features]
xtralog = []
