[package]
name = "vrft_d"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
api = { path = "../api" }
libloading = "0.9"
rosc = "0.11"
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
ureq = { version = "3.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mdns-sd = "0.17"
axum = "0.8"
ctrlc = "3.5"
fancy-regex = "0.17"

[features]
xtralog = []
